app service visual

--- a/.gitignore
+++ b/.gitignore
@@ -3,3 +3,4 @@
 ################################################################################
 
 /.vs/slnx.sqlite
+/.vs/Awesome-AppServices/v15/.suo
